z-index issue in Home solved

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ footer{
 nav{
 	position: sticky !important;
 	top: 0 !important;
+	z-index: 1;
 /*	width: 100%;*/
 }
 
